--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,8 @@ source:
 
 build:
   number: 0
+  # Temporary disable until scipy+np112 is available.
+  skip: True  # [np==112]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -22,11 +24,9 @@ requirements:
     - toolchain
     - cython
     - numpy x.x
-    - numpy >=1.6
   run:
     - python
     - numpy x.x
-    - numpy >=1.6
     - scipy >=0.14
     - six >=1.10.0
 
