--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,7 @@ source:
 
 build:
   number: 1000
-  # Temporary disable until scipy+np112 is available.
-  skip: True  # [np==112]
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install --no-deps --ignore-installed .  --verbose
 
 requirements:
   build:
