--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "PyAbel" %}
-{% set version = "0.8.3" %}
-{% set sha256 = "c6dc00b0af37be9a2dd20e667a4c805b53a05bfe24061936f45aed245ed21a4f" %}
+{% set version = "0.8.4" %}
+{% set sha256 = "a09e46e4e1d6a2ce30ddbb5f4d23d117adf443e772aae0cc7df3497aaee14059" %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: python -m pip install --no-deps --ignore-installed .  --verbose
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   build:
@@ -22,7 +22,7 @@ requirements:
     - python
     - setuptools
     - pip
-    - cython
+    - cython <3.0.0
     - numpy
   run:
     - python
